Message clair sur la modif

--- a/public/index.html
+++ b/public/index.html
@@ -60,8 +60,15 @@
 <section class="hero" id="accueil">
   <div class="hero-content">
     <h1 data-i18n="hero.title">Votre argent partout tout de suite 🌍</h1>
-    <p data-i18n="hero.subtitle">La nouvelle façon d’envoyer et de recevoir de l’argent entre l’Afrique et l’Europe.</p>
+    <p data-i18n="hero.subtitle">
+      La nouvelle façon d’envoyer et de recevoir de l’argent entre l’Afrique et l’Europe.
+    </p>
     <a href="attente.html" class="cta" data-i18n="hero.cta">Rejoindre la liste d’attente</a>
+
+    <!-- 👇 Bouton vers l'Espace Pro -->
+    <a href="pro.html" class="cta" style="margin-top:15px; display:inline-block;">
+      Accéder à l’Espace Pro
+    </a>
   </div>
 </section>
 
