--- a/public/kwiktransfert.html
+++ b/public/kwiktransfert.html
@@ -125,5 +125,7 @@
     window.location.href = "index.html";
   }
 </script>
+<!-- Appels scripts globaux -->
+<script src="app.js"></script>
 </body>
 </html>
