Message clair sur la modif

--- a/public/index.html
+++ b/public/index.html
@@ -64,11 +64,11 @@
       La nouvelle façon d’envoyer et de recevoir de l’argent entre l’Afrique et l’Europe.
     </p>
     <a href="attente.html" class="cta" data-i18n="hero.cta">Rejoindre la liste d’attente</a>
+  </div>
 
-    <!-- 👇 Bouton vers l'Espace Pro -->
-    <a href="pro.html" class="cta" style="margin-top:15px; display:inline-block;">
-      Accéder à l’Espace Pro
-    </a>
+  <!-- 👇 Bouton vers l'Espace Pro (en dehors du bloc hero-content) -->
+  <div style="text-align:center; margin-top:20px;">
+    <a href="pro.html" class="cta">Accéder à l’Espace Pro</a>
   </div>
 </section>
 
@@ -90,7 +90,7 @@
       <h3 data-i18n="features.kwiksend.title">👥 Transferts KwikSend ↔ KwikSend</h3>
       <p data-i18n="features.kwiksend.text">Gratuit ou à petit coût.</p>
     </div>
-    
+
     <div class="card clickable" onclick="location.href='releves.html'">
       <h3 data-i18n="features.releve.title">📄 Relevés officiels</h3>
       <p data-i18n="features.releve.text">Téléchargez un relevé certifié de vos transactions pour vos démarches.</p>
