Mise à jour automatique du site KwikSend-V2

--- a/public/index.html
+++ b/public/index.html
@@ -136,5 +136,13 @@
 
 <script src="translate.js"></script>
 <script src="app.js"></script>
+<script>
+  if ("serviceWorker" in navigator) {
+    navigator.serviceWorker
+      .register("/sw.js")
+      .then(() => console.log("Service Worker enregistré ✅"))
+      .catch(err => console.log("Erreur SW:", err));
+  }
+</script>
 </body>
 </html>
