--- a/public/connexion.html
+++ b/public/connexion.html
@@ -4,175 +4,209 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>KwikSend - Connexion</title>
+  <title>KwikSend – Connexion</title>
   <meta name="description" content="Connectez-vous à KwikSend pour envoyer et recevoir de l’argent entre l’Afrique et l’Europe.">
   <meta name="theme-color" content="#ff7a00">
 
-  <!-- Favicon & icônes -->
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+  <!-- Icônes -->
+  <link rel="icon" type="image/png" href="favicon-32x32.png">
+  <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
-  <!-- Manifest PWA -->
-  <link rel="manifest" href="site.webmanifest">
-
-  <!-- Styles -->
+  <!-- Style principal -->
   <link rel="stylesheet" href="style.css">
+
+  <style>
+    body {
+      background: linear-gradient(180deg, #ff9a00, #ff7a00);
+      font-family: "Segoe UI", Tahoma, sans-serif;
+      color: #fff;
+      text-align: center;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .auth-box {
+      background: #fff;
+      color: #333;
+      border-radius: 16px;
+      padding: 2rem;
+      width: 90%;
+      max-width: 420px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+    }
+
+    h1 {
+      color: #ff7a00;
+      margin-bottom: 1rem;
+    }
+
+    input {
+      width: 100%;
+      padding: 0.9rem;
+      margin: 0.5rem 0;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+      font-size: 1rem;
+    }
+
+    button {
+      width: 100%;
+      padding: 1rem;
+      margin-top: 1rem;
+      background: #ff7a00;
+      color: #fff;
+      font-weight: 600;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: 0.25s;
+    }
+
+    button:hover {
+      background: #ff9a33;
+    }
+
+    .tabs {
+      display: flex;
+      justify-content: center;
+      gap: .5rem;
+      margin-bottom: 1rem;
+    }
+
+    .tabs button {
+      flex: 1;
+      background: #ffe7cc;
+      color: #ff7a00;
+      border: none;
+      padding: .8rem;
+      border-radius: 8px;
+      cursor: pointer;
+      font-weight: 600;
+      transition: 0.25s;
+    }
+
+    .tabs button.active {
+      background: #ff7a00;
+      color: #fff;
+    }
+
+    .links {
+      margin-top: 1rem;
+      font-size: .9rem;
+    }
+
+    .links a {
+      color: #ff7a00;
+      font-weight: 600;
+      text-decoration: none;
+    }
+
+    footer {
+      margin-top: 2rem;
+      color: #fff;
+      font-size: .9rem;
+      opacity: 0.8;
+    }
+  </style>
 </head>
 <body>
 
-<!-- 🧭 Header -->
-<header>
-  <div class="container header-container">
-    <div class="logo">Kwik<span>Send</span></div>
-    <nav>
-      <ul class="nav-links">
-        <li><a href="index.html" data-i18n="nav.home">Accueil</a></li>
-        <li><a href="index.html#fonctionnalites" data-i18n="nav.features">Fonctionnalités</a></li>
-        <li><a href="index.html#avantages" data-i18n="nav.advantages">Avantages</a></li>
-        <li><a href="portefeuille.html" data-i18n="nav.wallet">Portefeuille</a></li>
-        <li><a href="connexion.html" class="cta-nav active" data-i18n="nav.login">Connexion</a></li>
-      </ul>
-    </nav>
-    <div class="header-actions">
-      <select id="langSwitcher" onchange="switchLang(this.value)">
-        <option value="fr">🇫🇷 FR</option>
-        <option value="en">🇬🇧 EN</option>
-      </select>
-      <button id="darkToggle">🌙</button>
+  <div class="auth-box">
+    <h1 id="auth-title">Connexion</h1>
+
+    <div class="tabs">
+      <button id="tab-login" class="active" onclick="showAuth('login')">Connexion</button>
+      <button id="tab-signup" onclick="showAuth('signup')">Créer un compte</button>
+      <button id="tab-reset" onclick="showAuth('reset')">Mot de passe</button>
+    </div>
+
+    <!-- Connexion -->
+    <form id="login-form" style="display:flex;flex-direction:column;gap:.8rem;">
+      <input type="email" name="email" placeholder="Adresse e-mail" required>
+      <input type="password" name="password" placeholder="Mot de passe" required>
+      <button type="submit">Se connecter</button>
+    </form>
+
+    <!-- Inscription -->
+    <form id="signup-form" style="display:none;flex-direction:column;gap:.8rem;">
+      <input type="text" name="name" placeholder="Nom complet" required>
+      <input type="email" name="email" placeholder="Adresse e-mail" required>
+      <input type="password" name="password" placeholder="Mot de passe" required>
+      <button type="submit">Créer mon compte</button>
+    </form>
+
+    <!-- Réinitialisation -->
+    <form id="reset-form" style="display:none;flex-direction:column;gap:.8rem;">
+      <input type="email" name="email" placeholder="Adresse e-mail" required>
+      <button type="submit">Envoyer le lien</button>
+    </form>
+
+    <div class="links">
+      <a href="index.html">⬅ Retour à l’accueil</a>
     </div>
   </div>
-</header>
 
-<!-- 🔐 Auth -->
-<section class="hero" style="padding-top:3rem;padding-bottom:3rem;">
-  <div class="hero-content" style="max-width:900px;margin:auto;">
-    <h1 data-i18n="login.title">Connexion</h1>
-    <p class="subtitle" data-i18n="hero.subtitle">La nouvelle façon d’envoyer et de recevoir de l’argent entre l’Afrique et l’Europe.</p>
+  <footer>© 2025 KwikSend. Tous droits réservés.</footer>
 
-    <!-- Onglets -->
-    <div style="display:flex;gap:.5rem;justify-content:center;margin:1rem 0 2rem;">
-      <button class="cta" onclick="showAuth('login')">Connexion</button>
-      <button class="cta" onclick="showAuth('signup')" style="background:#0a8f2f;">Créer un compte</button>
-      <button class="cta" onclick="showAuth('reset')" style="background:#0a8f2f;">Mot de passe</button>
-    </div>
+  <script>
+    function showAuth(type) {
+      document.getElementById("auth-title").textContent =
+        type === "login" ? "Connexion" :
+        type === "signup" ? "Créer un compte" :
+        "Réinitialisation du mot de passe";
 
-    <!-- Cartes -->
-    <div style="display:grid;grid-template-columns:1fr;gap:1rem;max-width:420px;margin:0 auto;">
-      
-      <!-- Connexion -->
-      <div class="card" id="box-login">
-        <h3>Connexion</h3>
-        <form id="login-form" style="display:flex;flex-direction:column;gap:.8rem;">
-          <input type="email" name="email" placeholder="Adresse e-mail" required>
-          <input type="password" name="password" placeholder="Mot de passe" required>
-          <button type="submit" class="cta">Se connecter</button>
-        </form>
-      </div>
+      ["login-form", "signup-form", "reset-form"].forEach(id =>
+        document.getElementById(id).style.display = "none"
+      );
+      document.getElementById(type + "-form").style.display = "flex";
 
-      <!-- Inscription -->
-      <div class="card" id="box-signup" style="display:none;">
-        <h3>Créer un compte</h3>
-        <form id="signup-form" style="display:flex;flex-direction:column;gap:.8rem;">
-          <input type="text" name="name" placeholder="Nom complet" required>
-          <input type="email" name="email" placeholder="Adresse e-mail" required>
-          <input type="password" name="password" placeholder="Mot de passe" required>
-          <button type="submit" class="cta">S’inscrire</button>
-        </form>
-      </div>
+      // Gère les boutons actifs
+      document.querySelectorAll(".tabs button").forEach(btn => btn.classList.remove("active"));
+      document.getElementById("tab-" + type).classList.add("active");
+    }
 
-      <!-- Reset -->
-      <div class="card" id="box-reset" style="display:none;">
-        <h3 style="margin-bottom:.5rem;">Réinitialisation</h3>
-        <form id="reset-form" style="display:flex;flex-direction:column;gap:.8rem;">
-          <input type="email" name="email" placeholder="Adresse e-mail" required>
-          <button type="submit" class="cta">Envoyer le lien</button>
-        </form>
-        <div class="links" style="margin-top:.8rem;font-size:.95rem;">
-          <a href="javascript:void(0)" onclick="showAuth('login')">⬅ Retour à la connexion</a>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- 📝 Footer -->
-<footer>
-  <p>© 2025 KwikSend. <span data-i18n="footer.rights">Tous droits réservés.</span></p>
-</footer>
-
-<!-- 📜 Scripts communs -->
-<script src="script.js"></script>
-<script src="translate.js"></script>
-<script src="app.js"></script>
-
-<!-- 📲 Enregistrement du Service Worker -->
-<script>
-  if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register('/sw.js').catch(console.error);
-  }
-
-  // --- Gestion des onglets ---
-  function showAuth(which){
-    const boxes = {login:'box-login', signup:'box-signup', reset:'box-reset'};
-    Object.values(boxes).forEach(id => document.getElementById(id).style.display = 'none');
-    document.getElementById(boxes[which]).style.display = 'block';
-    const firstInput = document.querySelector('#'+boxes[which]+' input');
-    if(firstInput) firstInput.focus();
-  }
-
-  // --- Auth Signup ---
-  document.getElementById("signup-form").addEventListener("submit", async e => {
-    e.preventDefault();
-    const form = new FormData(e.target);
-    const res = await fetch("/register", {
-      method: "POST",
-      headers: {"Content-Type":"application/json"},
-      body: JSON.stringify({
+    // --- Inscription ---
+    document.getElementById("signup-form").addEventListener("submit", e => {
+      e.preventDefault();
+      const form = new FormData(e.target);
+      const user = {
         name: form.get("name"),
         email: form.get("email"),
-        password: form.get("password")
-      })
+      };
+      localStorage.setItem("kwiksend_user", JSON.stringify(user));
+      alert("🎉 Compte créé avec succès !");
+      window.location.href = "dashboard.html";
     });
-    const data = await res.json();
-    alert(data.message);
-    if(res.ok){
-      // Utilise les infos renvoyées par le backend
-      localStorage.setItem("kwiksend_user", JSON.stringify(data.user));
-      window.location.href="dashboard.html";
+
+    // --- Connexion ---
+    document.getElementById("login-form").addEventListener("submit", e => {
+      e.preventDefault();
+      const form = new FormData(e.target);
+      const user = { email: form.get("email") };
+      localStorage.setItem("kwiksend_user", JSON.stringify(user));
+      alert("✅ Connexion réussie !");
+      window.location.href = "dashboard.html";
+    });
+
+    // --- Réinitialisation (simulation) ---
+    document.getElementById("reset-form").addEventListener("submit", e => {
+      e.preventDefault();
+      alert("📩 Un lien de réinitialisation a été envoyé à votre adresse e-mail.");
+      showAuth("login");
+    });
+  </script>
+<script>
+  // ✅ Vérifie si l'utilisateur est déjà connecté
+  document.addEventListener("DOMContentLoaded", () => {
+    const user = localStorage.getItem("kwiksend_user");
+    if (user) {
+      console.log("✅ Utilisateur déjà connecté :", user);
+      window.location.href = "dashboard.html";
     }
   });
-
-  // --- Auth Login ---
-  document.getElementById("login-form").addEventListener("submit", async e => {
-    e.preventDefault();
-    const form = new FormData(e.target);
-    const res = await fetch("/login", {
-      method: "POST",
-      headers: {"Content-Type":"application/json"},
-      body: JSON.stringify({
-        email: form.get("email"),
-        password: form.get("password")
-      })
-    });
-    const data = await res.json();
-    alert(data.message);
-    if(res.ok){
-      // Utilise les infos renvoyées par le backend
-      localStorage.setItem("kwiksend_user", JSON.stringify(data.user));
-      window.location.href="dashboard.html";
-    }
-  });
-  // --- Reset password (fake pour l’instant) ---
-  document.getElementById("reset-form").addEventListener("submit", e => {
-    e.preventDefault();
-    alert("📩 Un lien de réinitialisation a été envoyé à votre email.");
-    showAuth('login');
-  });
-
-  // Onglet par défaut
-  showAuth('login');
 </script>
 </body>
 </html>
