--- a/public/portefeuille.html
+++ b/public/portefeuille.html
@@ -18,18 +18,27 @@
       font-family: 'Inter', -apple-system, sans-serif;
     }
 
+    @keyframes bgGradient {
+      0% { background: linear-gradient(135deg, #ffffff 0%, #fff8f2 100%); }
+      33% { background: linear-gradient(135deg, #fff8f2 0%, #ffe7cc 100%); }
+      66% { background: linear-gradient(135deg, #ffe7cc 0%, #f3e5f5 100%); }
+      100% { background: linear-gradient(135deg, #f3e5f5 0%, #ffffff 100%); }
+    }
+
     body {
-      background: #0A0F1C;
-      color: #F7F7F7;
+      background: #ffffff;
+      animation: bgGradient 12s ease-in-out infinite;
+      color: #0A0F1C;
       min-height: 100vh;
     }
 
     /* 🧭 Header moderne */
     header {
-      background: linear-gradient(135deg, #0A0F1C 0%, #1a1f2e 100%);
+      background: rgba(255, 255, 255, 0.95);
+      backdrop-filter: blur(10px);
       padding: 1rem 0;
       border-bottom: 1px solid rgba(255, 138, 0, 0.1);
-      backdrop-filter: blur(10px);
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
       position: sticky;
       top: 0;
       z-index: 999;
@@ -59,7 +68,7 @@
     }
 
     .nav-links a {
-      color: #B0B3C2;
+      color: #0A0F1C;
       text-decoration: none;
       font-weight: 500;
       transition: 0.2s;
@@ -96,9 +105,9 @@
 
     .currency-btn {
       padding: 0.6rem 1.5rem;
-      border: 2px solid #2a2f3e;
-      background: transparent;
-      color: #B0B3C2;
+      border: 2px solid #e0e0e0;
+      background: white;
+      color: #0A0F1C;
       border-radius: 25px;
       cursor: pointer;
       transition: all 0.3s;
@@ -128,7 +137,7 @@
     }
 
     .secondary-balance {
-      color: #B0B3C2;
+      color: #666;
       font-size: 0.95rem;
     }
 
@@ -253,22 +262,24 @@
       font-size: 1.3rem;
       font-weight: 700;
       margin-bottom: 1rem;
-      color: #F7F7F7;
+      color: #0A0F1C;
     }
 
     .transaction-item {
-      background: rgba(255, 255, 255, 0.05);
-      border: 1px solid rgba(255, 138, 0, 0.1);
+      background: rgba(255, 255, 255, 0.8);
+      border: 1px solid rgba(255, 138, 0, 0.15);
       padding: 1rem;
       border-radius: 12px;
       margin-bottom: 0.8rem;
       transition: all 0.2s;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
     }
 
     .transaction-item:hover {
-      background: rgba(255, 138, 0, 0.08);
-      border-color: rgba(255, 138, 0, 0.3);
+      background: rgba(255, 255, 255, 1);
+      border-color: rgba(255, 138, 0, 0.4);
       transform: translateX(5px);
+      box-shadow: 0 4px 16px rgba(255, 138, 0, 0.15);
     }
 
     .transaction-content {
@@ -279,12 +290,12 @@
 
     .transaction-type {
       font-weight: 600;
-      color: #F7F7F7;
+      color: #0A0F1C;
     }
 
     .transaction-date {
       font-size: 0.85rem;
-      color: #B0B3C2;
+      color: #666;
       margin-top: 0.3rem;
     }
 
@@ -309,20 +320,20 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: rgba(10, 15, 28, 0.95);
-      backdrop-filter: blur(10px);
+      background: rgba(0, 0, 0, 0.6);
+      backdrop-filter: blur(8px);
       align-items: center;
       justify-content: center;
       z-index: 9999;
     }
 
     .modal-content {
-      background: #1a1f2e;
+      background: white;
       padding: 2rem;
       border-radius: 16px;
       max-width: 420px;
       width: 90%;
-      box-shadow: 0 20px 60px rgba(0, 0, 0, 0.5);
+      box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
       border: 1px solid rgba(255, 138, 0, 0.2);
     }
 
@@ -336,7 +347,7 @@
     }
 
     .modal-subtitle {
-      color: #B0B3C2;
+      color: #666;
       margin-bottom: 1.5rem;
       font-size: 0.9rem;
     }
@@ -344,9 +355,9 @@
     .modal-input {
       width: 100%;
       padding: 1rem;
-      border: 2px solid #2a2f3e;
-      background: rgba(0,0,0,0.3);
-      color: #F7F7F7;
+      border: 2px solid #e0e0e0;
+      background: #f9f9f9;
+      color: #0A0F1C;
       border-radius: 10px;
       font-size: 1.1rem;
       text-align: center;
@@ -376,8 +387,8 @@
     }
 
     .modal-btn-secondary {
-      background: rgba(255,255,255,0.05);
-      color: #B0B3C2;
+      background: #f0f0f0;
+      color: #666;
     }
 
     /* QR & Payment Link */
@@ -411,9 +422,9 @@
     .link-input {
       flex: 1;
       padding: 0.8rem;
-      border: 2px solid #2a2f3e;
-      background: rgba(0,0,0,0.3);
-      color: #F7F7F7;
+      border: 2px solid #e0e0e0;
+      background: #f9f9f9;
+      color: #0A0F1C;
       border-radius: 8px;
       font-size: 0.85rem;
     }
@@ -456,16 +467,18 @@
     .action-choice {
       flex: 1;
       padding: 1rem;
-      border: 2px solid #2a2f3e;
+      border: 2px solid #e0e0e0;
+      background: white;
       border-radius: 10px;
       cursor: pointer;
       transition: 0.2s;
       text-align: center;
+      color: #0A0F1C;
     }
 
     .action-choice:hover {
       border-color: #FF8A00;
-      background: rgba(255, 138, 0, 0.1);
+      background: rgba(255, 138, 0, 0.05);
     }
 
     .action-choice input {
@@ -474,7 +487,7 @@
 
     .action-choice:has(input:checked) {
       border-color: #FF8A00;
-      background: rgba(255, 138, 0, 0.15);
+      background: rgba(255, 138, 0, 0.1);
     }
 
     .method-grid {
@@ -486,9 +499,9 @@
 
     .method-btn {
       padding: 1rem;
-      border: 2px solid #2a2f3e;
-      background: transparent;
-      color: #F7F7F7;
+      border: 2px solid #e0e0e0;
+      background: white;
+      color: #0A0F1C;
       border-radius: 10px;
       cursor: pointer;
       transition: 0.2s;
@@ -497,7 +510,7 @@
 
     .method-btn:hover {
       border-color: #FF8A00;
-      background: rgba(255, 138, 0, 0.1);
+      background: rgba(255, 138, 0, 0.05);
     }
 
     /* Responsive */
@@ -585,8 +598,8 @@
     
     <!-- Sélecteur devise -->
     <div class="currency-selector" style="margin-bottom:1rem;">
-      <button class="currency-btn active" onclick="modalCurrency='EUR'">EUR</button>
-      <button class="currency-btn" onclick="modalCurrency='FCFA'">FCFA</button>
+      <button class="currency-btn active" onclick="switchModalCurrency('EUR', this)">EUR</button>
+      <button class="currency-btn" onclick="switchModalCurrency('FCFA', this)">FCFA</button>
     </div>
 
     <input type="number" id="sendAmount" class="modal-input" placeholder="Ex: 50" min="1" step="0.01" />
@@ -605,8 +618,8 @@
       
       <!-- Sélecteur devise -->
       <div class="currency-selector" style="margin-bottom:1rem;">
-        <button class="currency-btn active" onclick="receiveCurrency='EUR'">EUR</button>
-        <button class="currency-btn" onclick="receiveCurrency='FCFA'">FCFA</button>
+        <button class="currency-btn active" onclick="switchReceiveCurrency('EUR', this)">EUR</button>
+        <button class="currency-btn" onclick="switchReceiveCurrency('FCFA', this)">FCFA</button>
       </div>
 
       <input type="number" id="receiveAmount" class="modal-input" placeholder="Ex: 50" min="1" step="0.01" />
@@ -733,26 +746,41 @@
           </div>
         </div>
       `).join("")
-      : '<div style="text-align:center;padding:2rem;color:#B0B3C2;">Aucune transaction</div>';
+      : '<div style="text-align:center;padding:2rem;color:#999;">Aucune transaction</div>';
   }
 
   renderWallet();
 
   window.switchCurrency = (curr) => {
     currentCurrency = curr;
-    document.querySelectorAll('.currency-selector .currency-btn').forEach(btn => btn.classList.remove('active'));
+    const buttons = event.target.closest('.currency-selector').querySelectorAll('.currency-btn');
+    buttons.forEach(btn => btn.classList.remove('active'));
     event.target.classList.add('active');
     renderWallet();
   };
 
-  // Modal Envoyer
+  // 💸 Modal Envoyer
   window.openSendModal = () => {
     document.getElementById("sendModal").style.display = "flex";
     document.getElementById("sendAmount").value = "";
+    modalCurrency = 'EUR';
+    // Reset boutons devise
+    const modal = document.getElementById("sendModal");
+    modal.querySelectorAll('.currency-btn').forEach((btn, i) => {
+      if(i === 0) btn.classList.add('active');
+      else btn.classList.remove('active');
+    });
   };
 
   window.closeSendModal = () => {
     document.getElementById("sendModal").style.display = "none";
+  };
+
+  // 🔄 Switch devise dans modal Envoyer
+  window.switchModalCurrency = (currency, element) => {
+    modalCurrency = currency;
+    element.parentElement.querySelectorAll('.currency-btn').forEach(btn => btn.classList.remove('active'));
+    element.classList.add('active');
   };
 
   window.confirmSend = () => {
@@ -763,7 +791,7 @@
     window.location.href = "transfert.html";
   };
 
-  // Modal Recevoir
+  // 📥 Modal Recevoir
   let currentAmount = 0;
   let currentPaymentLink = "";
 
@@ -772,12 +800,26 @@
     document.getElementById("amountStep").style.display = "block";
     document.getElementById("paymentLinkStep").style.display = "none";
     document.getElementById("receiveAmount").value = "";
+    receiveCurrency = 'EUR';
+    // Reset boutons devise
+    const modal = document.getElementById("receiveModal");
+    modal.querySelectorAll('.currency-btn').forEach((btn, i) => {
+      if(i === 0) btn.classList.add('active');
+      else btn.classList.remove('active');
+    });
   };
 
   window.closeReceiveModal = () => {
     document.getElementById("receiveModal").style.display = "none";
     document.getElementById("amountStep").style.display = "block";
     document.getElementById("paymentLinkStep").style.display = "none";
+  };
+
+  // 🔄 Switch devise dans modal Recevoir
+  window.switchReceiveCurrency = (currency, element) => {
+    receiveCurrency = currency;
+    element.parentElement.querySelectorAll('.currency-btn').forEach(btn => btn.classList.remove('active'));
+    element.classList.add('active');
   };
 
   window.generatePaymentLink = () => {
@@ -802,15 +844,21 @@
   };
 
   window.copyPaymentLink = () => {
+    const btn = event.target;
     navigator.clipboard.writeText(currentPaymentLink).then(() => {
-      const btn = event.target;
-      const original = btn.textContent;
-      btn.textContent = "✅";
+      const original = btn.innerHTML;
+      btn.innerHTML = "✅ Copié !";
       btn.style.background = "#00B87C";
+      btn.style.fontSize = "0.85rem";
+      btn.style.padding = "0.8rem 0.6rem";
       setTimeout(() => {
-        btn.textContent = original;
+        btn.innerHTML = original;
         btn.style.background = "#FF8A00";
-      }, 1500);
+        btn.style.fontSize = "1.2rem";
+        btn.style.padding = "0.8rem 1rem";
+      }, 2000);
+    }).catch(() => {
+      alert("✅ Lien copié !");
     });
   };
 
