--- a/public/kwiktransfert.html
+++ b/public/kwiktransfert.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>KwikSend - Transferts P2P</title>
-  <meta name="description" content="Envoyez de l’argent instantanément entre utilisateurs KwikSend grâce aux transferts P2P.">
+  <meta name="description" content="Envoyez de l'argent instantanément entre utilisateurs KwikSend grâce aux transferts P2P.">
   <meta name="theme-color" content="#ff7a00">
 
   <!-- Favicon & icônes -->
@@ -17,45 +17,312 @@
   <!-- Manifest PWA -->
   <link rel="manifest" href="site.webmanifest">
 
-  <!-- Styles -->
-  <link rel="stylesheet" href="style.css">
+  <!-- Font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&display=swap" rel="stylesheet">
+
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Inter', -apple-system, sans-serif;
+    }
+
+    @keyframes bgGradient {
+      0% { background: linear-gradient(135deg, #ffffff 0%, #fff8f2 100%); }
+      33% { background: linear-gradient(135deg, #fff8f2 0%, #ffe7cc 100%); }
+      66% { background: linear-gradient(135deg, #ffe7cc 0%, #f3e5f5 100%); }
+      100% { background: linear-gradient(135deg, #f3e5f5 0%, #ffffff 100%); }
+    }
+
+    body {
+      background: #ffffff;
+      animation: bgGradient 12s ease-in-out infinite;
+      color: #0A0F1C;
+      min-height: 100vh;
+    }
+
+    /* 🧭 Header moderne */
+    header {
+      background: rgba(255, 255, 255, 0.95);
+      backdrop-filter: blur(10px);
+      padding: 1rem 0;
+      border-bottom: 1px solid rgba(255, 138, 0, 0.1);
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+      position: sticky;
+      top: 0;
+      z-index: 999;
+    }
+
+    .header-container {
+      width: 90%;
+      max-width: 1200px;
+      margin: auto;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .logo {
+      font-size: 1.5rem;
+      font-weight: 900;
+      background: linear-gradient(90deg, #FF8A00, #00B87C);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      cursor: pointer;
+    }
+
+    .nav-links {
+      display: flex;
+      gap: 2rem;
+      list-style: none;
+    }
+
+    .nav-links a {
+      color: #0A0F1C;
+      text-decoration: none;
+      font-weight: 500;
+      transition: 0.2s;
+    }
+
+    .nav-links a:hover, .nav-links a.active {
+      color: #FF8A00;
+    }
+
+    /* 💼 Container principal */
+    .p2p-container {
+      max-width: 700px;
+      margin: 3rem auto;
+      padding: 0 1rem;
+    }
+
+    .p2p-title {
+      text-align: center;
+      font-size: 2rem;
+      font-weight: 900;
+      margin-bottom: 1rem;
+      background: linear-gradient(90deg, #FF8A00, #00B87C, #8B5CF6);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+
+    .p2p-subtitle {
+      text-align: center;
+      color: #666;
+      margin-bottom: 2rem;
+      font-size: 1.05rem;
+    }
+
+    /* 📋 Formulaire moderne */
+    .p2p-form {
+      background: white;
+      padding: 2.5rem;
+      border-radius: 20px;
+      box-shadow: 0 6px 20px rgba(10, 15, 28, 0.08);
+      border: 1px solid rgba(255, 138, 0, 0.1);
+      margin-bottom: 2rem;
+    }
+
+    .form-group {
+      margin-bottom: 1.5rem;
+    }
+
+    .form-group label {
+      display: block;
+      margin-bottom: 0.5rem;
+      font-weight: 600;
+      color: #0A0F1C;
+      font-size: 0.95rem;
+    }
+
+    .form-group input {
+      width: 100%;
+      padding: 1rem;
+      border: 2px solid #e0e0e0;
+      border-radius: 12px;
+      font-size: 1rem;
+      transition: all 0.3s;
+      background: white;
+      color: #0A0F1C;
+    }
+
+    .form-group input:focus {
+      outline: none;
+      border-color: #FF8A00;
+      box-shadow: 0 0 0 4px rgba(255, 138, 0, 0.1);
+    }
+
+    .form-group input::placeholder {
+      color: #B0B3C2;
+    }
+
+    /* 💡 Info box */
+    .info-box {
+      background: linear-gradient(135deg, rgba(139, 92, 246, 0.1), rgba(255, 138, 0, 0.05));
+      border-left: 4px solid #8B5CF6;
+      padding: 1rem;
+      border-radius: 10px;
+      margin-bottom: 1.5rem;
+      font-size: 0.9rem;
+      color: #666;
+    }
+
+    .info-box strong {
+      color: #8B5CF6;
+    }
+
+    /* 🎯 Bouton d'envoi */
+    .submit-btn {
+      width: 100%;
+      padding: 1.2rem;
+      border: none;
+      border-radius: 16px;
+      background: linear-gradient(135deg, #00B87C, #00D48F);
+      color: white;
+      font-weight: 700;
+      font-size: 1.1rem;
+      cursor: pointer;
+      transition: all 0.3s;
+      position: relative;
+      overflow: hidden;
+    }
+
+    .submit-btn::before {
+      content: '';
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 0;
+      height: 0;
+      border-radius: 50%;
+      background: rgba(255,255,255,0.2);
+      transform: translate(-50%, -50%);
+      transition: width 0.5s, height 0.5s;
+    }
+
+    .submit-btn:hover {
+      transform: translateY(-3px);
+      box-shadow: 0 12px 35px rgba(0, 184, 124, 0.4);
+    }
+
+    .submit-btn:hover::before {
+      width: 300px;
+      height: 300px;
+    }
+
+    /* 💰 Solde affiché */
+    .balance-display {
+      background: linear-gradient(135deg, rgba(255, 138, 0, 0.08), rgba(0, 184, 124, 0.08));
+      border: 2px solid rgba(255, 138, 0, 0.2);
+      border-radius: 16px;
+      padding: 1.5rem;
+      text-align: center;
+      margin-bottom: 2rem;
+    }
+
+    .balance-label {
+      font-size: 0.9rem;
+      color: #666;
+      margin-bottom: 0.5rem;
+    }
+
+    .balance-value {
+      font-size: 2rem;
+      font-weight: 900;
+      background: linear-gradient(90deg, #FF8A00, #00B87C);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+
+    /* 📱 Responsive */
+    @media (max-width: 768px) {
+      .nav-links {
+        display: none;
+      }
+
+      .p2p-title {
+        font-size: 1.5rem;
+      }
+
+      .p2p-form {
+        padding: 1.5rem;
+      }
+    }
+
+    /* Footer */
+    footer {
+      background: #0A0F1C;
+      color: white;
+      text-align: center;
+      padding: 2rem;
+      margin-top: 3rem;
+    }
+  </style>
 </head>
 <body>
 
 <!-- 🧭 Header -->
 <header>
   <div class="header-container">
-    <div class="logo">Kwik<span>Send</span></div>
+    <div class="logo" onclick="window.location.href='dashboard.html'">KwikSend</div>
     <nav>
-      <ul class="nav-links" id="nav-menu">
+      <ul class="nav-links">
         <li><a href="dashboard.html">Accueil</a></li>
         <li><a href="portefeuille.html">Portefeuille</a></li>
         <li><a href="transfert.html">Transfert</a></li>
-        <li><a href="kwiktransfert.html">KwikTransfert</a></li>
+        <li><a href="kwiktransfert.html" class="active">KwikTransfert</a></li>
         <li><a href="releves.html">Relevés</a></li>
         <li><a href="profile.html">Compte</a></li>
         <li><a href="#" onclick="logout()">Déconnexion</a></li>
       </ul>
     </nav>
-    <span class="burger" onclick="toggleMenu()">☰</span>
   </div>
 </header>
 
-<!-- 👥 P2P -->
-<section class="hero" style="padding:2rem 1rem;">
-  <div class="hero-content" style="max-width:600px;margin:auto;">
-    <h1>👥 Transferts KwikSend ↔ KwikSend</h1>
-    <p>Envoyez gratuitement de l’argent à un autre utilisateur KwikSend.</p>
+<!-- 👥 Transfert P2P -->
+<section class="p2p-container">
+  <h1 class="p2p-title">👥 Transferts KwikSend ↔ KwikSend</h1>
+  <p class="p2p-subtitle">Envoyez gratuitement de l'argent à un autre utilisateur KwikSend.</p>
 
-    <!-- Formulaire -->
-    <form id="p2pForm" style="display:flex;flex-direction:column;gap:1rem;margin-top:2rem;">
-      <label>Destinataire (Email ou ID KwikSend) :</label>
-      <input type="text" id="p2pReceiver" placeholder="ex: user@kwiksend.com" required>
+  <!-- Affichage du solde -->
+  <div class="balance-display">
+    <div class="balance-label">💼 Votre solde disponible</div>
+    <div class="balance-value" id="currentBalance">0.00 €</div>
+  </div>
 
-      <label>Montant :</label>
-      <input type="number" id="p2pAmount" placeholder="Ex: 50" required min="1">
+  <!-- Formulaire -->
+  <div class="p2p-form">
+    <div class="info-box">
+      <strong>💡 Astuce :</strong> Les transferts entre utilisateurs KwikSend sont instantanés et gratuits ! Aucun frais ne sera appliqué.
+    </div>
 
-      <button type="submit" class="cta">Envoyer</button>
+    <form id="p2pForm">
+      <div class="form-group">
+        <label>📧 Destinataire (Email ou ID KwikSend)</label>
+        <input 
+          type="text" 
+          id="p2pReceiver" 
+          placeholder="ex: user@kwiksend.com ou ID123456" 
+          required
+        >
+      </div>
+
+      <div class="form-group">
+        <label>💰 Montant (EUR)</label>
+        <input 
+          type="number" 
+          id="p2pAmount" 
+          placeholder="Ex: 50" 
+          required 
+          min="0.01" 
+          step="0.01"
+        >
+      </div>
+
+      <button type="submit" class="submit-btn">
+        ✨ Envoyer instantanément
+      </button>
     </form>
   </div>
 </section>
@@ -65,67 +332,104 @@
   <p>© 2025 KwikSend. <span>Tous droits réservés.</span></p>
 </footer>
 
-<!-- 📜 Scripts communs -->
-<script src="script.js"></script>
-<script src="translate.js"></script>
-<script src="app.js"></script>
+<!-- 📜 Scripts -->
+<script>
+// ========================================
+// 🎮 CONFIGURATION & ÉTAT
+// ========================================
+const BAL_KEY = 'ks_balance';
+const HIST_KEY = 'ks_history';
 
-<!-- 📲 Service Worker + logique -->
+// ========================================
+// 💰 AFFICHAGE DU SOLDE
+// ========================================
+function updateBalanceDisplay() {
+  const balance = parseFloat(localStorage.getItem(BAL_KEY) || '0');
+  document.getElementById('currentBalance').textContent = balance.toFixed(2) + ' €';
+}
+
+// ========================================
+// ✅ TRAITEMENT DU TRANSFERT P2P
+// ========================================
+document.getElementById("p2pForm").addEventListener("submit", (e) => {
+  e.preventDefault();
+  
+  const receiver = document.getElementById("p2pReceiver").value.trim();
+  const amount = parseFloat(document.getElementById("p2pAmount").value);
+  
+  // Validations
+  if (!receiver) {
+    return alert("⚠️ Merci de saisir un destinataire valide.");
+  }
+  
+  if (!amount || amount <= 0) {
+    return alert("⚠️ Merci de saisir un montant valide.");
+  }
+  
+  // Récupération du solde
+  let balance = parseFloat(localStorage.getItem(BAL_KEY) || '0');
+  
+  // Vérification du solde
+  if (amount > balance) {
+    return alert("❌ Solde insuffisant dans le portefeuille KwikSend.\n\nSolde disponible : " + balance.toFixed(2) + " €");
+  }
+  
+  // Débit du portefeuille
+  balance -= amount;
+  localStorage.setItem(BAL_KEY, String(balance));
+  
+  // Enregistrement dans l'historique
+  let history = JSON.parse(localStorage.getItem(HIST_KEY) || '[]');
+  history.unshift({
+    date: new Date().toLocaleString(),
+    type: "Envoi P2P",
+    amount: -amount.toFixed(2),
+    to: receiver,
+    method: "KwikSend",
+    motif: "Transfert instantané",
+    status: "Réussi"
+  });
+  localStorage.setItem(HIST_KEY, JSON.stringify(history));
+  
+  // Message de succès
+  alert(`✅ Transfert de ${amount.toFixed(2)} EUR vers ${receiver} effectué avec succès !\n\n💡 Le destinataire recevra l'argent instantanément.`);
+  
+  // Réinitialisation du formulaire
+  document.getElementById("p2pForm").reset();
+  
+  // Mise à jour de l'affichage
+  updateBalanceDisplay();
+  
+  // Redirection vers portefeuille
+  setTimeout(() => {
+    window.location.href = "portefeuille.html?ok=1";
+  }, 1500);
+});
+
+// ========================================
+// 🚪 DÉCONNEXION
+// ========================================
+function logout() {
+  localStorage.removeItem("kwiksend_user");
+  window.location.href = "connexion.html";
+}
+
+// ========================================
+// 🔄 INITIALISATION
+// ========================================
+document.addEventListener('DOMContentLoaded', () => {
+  updateBalanceDisplay();
+});
+</script>
+
+<!-- Service Worker -->
 <script>
   if ('serviceWorker' in navigator) {
     navigator.serviceWorker.register('/sw.js').catch(console.error);
   }
-
-  const p2pForm = document.getElementById("p2pForm");
-
-  p2pForm.addEventListener("submit", (e) => {
-    e.preventDefault();
-    const receiver = document.getElementById("p2pReceiver").value.trim();
-    const amount = parseFloat(document.getElementById("p2pAmount").value);
-
-    if (!receiver || isNaN(amount) || amount <= 0) {
-      alert("⚠️ Merci de saisir un destinataire et un montant valide.");
-      return;
-    }
-
-    // --- Gestion localStorage
-    const BAL_KEY = 'ks_balance';
-    const HIST_KEY = 'ks_history';
-    let balance = parseFloat(localStorage.getItem(BAL_KEY) || '0');
-    let history = JSON.parse(localStorage.getItem(HIST_KEY) || '[]');
-
-    if (amount > balance) {
-      alert("❌ Solde insuffisant dans le portefeuille KwikSend.");
-      return;
-    }
-
-    // débit
-    balance -= amount;
-    localStorage.setItem(BAL_KEY, balance);
-
-    // historique
-    history.unshift({
-      type: "Envoi P2P",
-      amount: -amount,
-      to: receiver,
-      date: new Date().toLocaleString(),
-      status: "validé"
-    });
-    localStorage.setItem(HIST_KEY, JSON.stringify(history));
-
-    alert(`✅ Transfert de ${amount} EUR vers ${receiver} effectué avec succès !`);
-
-    // redirection portefeuille
-    window.location.href = "portefeuille.html?ok=1";
-  });
-
-  // --- Déconnexion
-  function logout(){
-    localStorage.removeItem("kwiksend_user");
-    window.location.href = "index.html";
-  }
 </script>
-<!-- Appels scripts globaux -->
+
+<!-- Appel scripts globaux -->
 <script src="app.js"></script>
 </body>
 </html>
