--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -29,30 +29,60 @@
       font-family: 'Inter', -apple-system, sans-serif;
     }
 
-    /* Animation de fond dynamique */
-    @keyframes bgGradient {
-      0% { background: linear-gradient(135deg, #ffffff 0%, #fff8f2 100%); }
-      33% { background: linear-gradient(135deg, #fff8f2 0%, #ffe7cc 100%); }
-      66% { background: linear-gradient(135deg, #ffe7cc 0%, #f3e5f5 100%); }
-      100% { background: linear-gradient(135deg, #f3e5f5 0%, #ffffff 100%); }
-    }
+/* 🌈 Nouveau fond animé fluide — type Stripe */
+body {
+  position: relative;
+  overflow-x: hidden;
+  min-height: 100vh;
+  color: #0A0F1C;
+  background: linear-gradient(120deg, #ff8a00, #00b87c, #8b5cf6);
+  background-size: 600% 600%;
+  animation: bgShift 20s ease infinite;
+}
 
-    @keyframes slideDown {
-      from { opacity: 0; transform: translateY(-20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
+/* Animation fluide du dégradé */
+@keyframes bgShift {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
 
-    @keyframes float {
-      0%, 100% { transform: translateY(0px); }
-      50% { transform: translateY(-10px); }
-    }
+/* 🌊 Effet de “vague douce” semi-transparente au-dessus */
+body::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: radial-gradient(circle at 30% 30%, rgba(255,255,255,0.15), transparent 70%),
+              radial-gradient(circle at 70% 70%, rgba(255,255,255,0.1), transparent 70%);
+  animation: waveMove 10s ease-in-out infinite alternate;
+  z-index: 0;
+}
 
-    body {
-      background: #ffffff;
-      animation: bgGradient 15s ease-in-out infinite;
-      color: #0A0F1C;
-      min-height: 100vh;
-    }
+@keyframes waveMove {
+  0% {
+    transform: translateY(0) scale(1);
+  }
+  100% {
+    transform: translateY(-10px) scale(1.05);
+  }
+}
+
+/* Tout le contenu reste au-dessus du fond animé */
+header, section, footer {
+  position: relative;
+  z-index: 1;
+  backdrop-filter: saturate(120%);
+}
+
 
     /* 🧭 Header moderne */
     header {
